tests/macros/list/validate.stderr
error: option `validate` does not exist for kind `list`
 --> $DIR/validate.rs:2:44
  |
2 |     let q = inquisition::questions![list { validate: todo!() }];
  |                                            ^^^^^^^^
