tests/macros/list/validate.rs
fn main() {
    let q = inquisition::questions![list { validate: todo!() }];
}
